--- a/airbyte-integrations/connectors/source-revel-new/source_revel_new/manifest.yaml
+++ b/airbyte-integrations/connectors/source-revel-new/source_revel_new/manifest.yaml
@@ -80,11 +80,11 @@ definitions:
       stream_slicer:
         type: "DatetimeStreamSlicer"
         start_datetime:
-          datetime: "2023-02-12"
+          datetime: "2023-02-01"
           datetime_format: "%Y-%m-%d"
         end_datetime:
-          datetime: "{{ now_utc() }}"
-          datetime_format: "%Y-%m-%d %H:%M:%S.%f+00:00"
+          datetime: "{{ now_utc().strftime('%Y-%m-%d') }}"
+          datetime_format: "%Y-%m-%d"
         step: "P1D"
         datetime_format: "%Y-%m-%d"
         cursor_granularity: "P1D"
@@ -99,6 +99,14 @@ definitions:
     #   end_time_option:
     #     field_name: "created_date__lte=2023-1-13T19:58:25"
     #     inject_into: "request_parameter"
+
+    # start_datetime:
+    #           datetime: "{{ config['start_date'] }}"
+    #           datetime_format: "%Y-%m-%dT%H:%M:%S%z"
+    #         end_datetime:
+    #           datetime: "{{ now_utc().strftime('%Y-%m-%dT%H:%M:%S%z') }}"
+    #           datetime_format: "%Y-%m-%dT%H:%M:%S%z"
+    #         datetime_format: "%Y-%m-%dT%H:%M:%S.%f%z"
       
   # # Main streams here!
   address_stream:
