Adding start_time_option

--- a/airbyte-integrations/connectors/source-revel-new/source_revel_new/manifest.yaml
+++ b/airbyte-integrations/connectors/source-revel-new/source_revel_new/manifest.yaml
@@ -80,21 +80,30 @@ definitions:
       stream_slicer:
         type: "DatetimeStreamSlicer"
         start_datetime:
-          datetime: "2023-02-01"
-          datetime_format: "%Y-%m-%d"
+          datetime: "2023-02-01T01:01:01"
+          datetime_format: "%Y-%m-%dT%H%M%S"
         end_datetime:
-          datetime: "{{ now_utc().strftime('%Y-%m-%d') }}"
-          datetime_format: "%Y-%m-%d"
+          datetime: "{{ now_utc().strftime('%Y-%m-%dT%H%M%S') }}"
+          datetime_format: "%Y-%m-%dT%H%M%S"
         step: "P1D"
-        datetime_format: "%Y-%m-%d"
+        datetime_format: "%Y-%m-%dT%H%M%S"
         cursor_granularity: "P1D"
         cursor_field: "updated_date"
+        # "updated_date": "2022-09-29T16:50:19"
+        start_time_option:
+          field_name: "updated_date__gt"
+          inject_into: "request_parameter"
+        end_time_option:
+          field_name: "updated_date__lte"
+          inject_into: "request_parameter"
+# "updated_date__gt=2023-02-01T19:58:25?updated_date__lte=2023-02-15T08:30:00"
+
     # stream_slicer:
     #   type: "DatetimeStreamSlicer"
     #   request_cursor_field: "updated_date" # updated_after
     #   cursor_field: "updated_date"
     #   start_time_option:
-    #     field_name: "created_date__gte=2023-1-01T19:58:25"
+    #     field_name: "updated_date__gt"
     #     inject_into: "request_parameter"
     #   end_time_option:
     #     field_name: "created_date__lte=2023-1-13T19:58:25"
