--- a/airbyte-integrations/connectors/source-revel-new/source_revel_new/manifest.yaml
+++ b/airbyte-integrations/connectors/source-revel-new/source_revel_new/manifest.yaml
@@ -80,16 +80,15 @@ definitions:
       stream_slicer:
         type: "DatetimeStreamSlicer"
         start_datetime:
-          datetime: "2023-02-01T01:01:01"
-          datetime_format: "%Y-%m-%dT%H%M%S"
+          datetime: "2023-02-14T01:01:01"
+          datetime_format: "%Y-%m-%dT%H:%M:%S"
         end_datetime:
-          datetime: "{{ now_utc().strftime('%Y-%m-%dT%H%M%S') }}"
-          datetime_format: "%Y-%m-%dT%H%M%S"
+          datetime: "{{ now_utc().strftime('%Y-%m-%dT%H:%M:%S') }}"
+          datetime_format: "%Y-%m-%dT%H:%M:%S"
         step: "P1D"
-        datetime_format: "%Y-%m-%dT%H%M%S"
-        cursor_granularity: "P1D"
+        datetime_format: "%Y-%m-%dT%H:%M:%S"
+        cursor_granularity: "PT1S"
         cursor_field: "updated_date"
-        # "updated_date": "2022-09-29T16:50:19"
         start_time_option:
           field_name: "updated_date__gt"
           inject_into: "request_parameter"
