--- a/airbyte-integrations/connectors/source-revel-new/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-revel-new/acceptance-test-config.yml
@@ -14,6 +14,8 @@ acceptance_tests:
   discovery:
     tests:
       - config_path: "secrets/config.json"
+        backward_compatibility_tests_config:
+          disable_for_version: "0.1.4"
   basic_read:
     tests:
       - config_path: "secrets/config.json"
@@ -25,8 +27,13 @@ acceptance_tests:
 #          extra_fields: no
 #          exact_order: no
 #          extra_records: yes
-  incremental: 
-    bypass_reason: "This connector does not implement incremental sync"
+  incremental:
+    tests:
+    - config_path: secrets/config.json
+      configured_catalog_path: integration_tests/configured_catalog.json
+      future_state:
+        future_state_path: integration_tests/abnormal_state.json 
+    #bypass_reason: "This connector does not implement incremental sync"
 # TODO uncomment this block this block if your connector implements incremental sync: 
 #    tests:
 #      - config_path: "secrets/config.json"
