--- a/source_revel_n/manifest.yaml
+++ b/source_revel_n/manifest.yaml
@@ -4,6 +4,7 @@ check:
   type: CheckStream
   stream_names:
     - address
+    - orderitem
 streams:
   - type: DeclarativeStream
     name: address
@@ -46,6 +47,185 @@ streams:
         pagination_strategy:
           type: OffsetIncrement
           page_size: 300
+
+  - type: DeclarativeStream
+    name: order
+    primary_key:
+      - uuid
+    schema_loader:
+      type: JsonFileSchemaLoader
+      file_path: "./source_revel_new/schemas/order.json"
+    retriever:
+      type: SimpleRetriever
+      requester:
+        name: order
+        type: HttpRequester
+        url_base: https://savoypizza.revelup.com/resources/
+        path: /Order
+        http_method: GET
+        request_parameters: {}
+        request_headers: {}
+        request_body_json: {}
+        authenticator:
+          type: ApiKeyAuthenticator
+          header: API-Authentication
+          api_token: '{{ config["api_key"] }}'
+      record_selector:
+        type: RecordSelector
+        extractor:
+          type: DpathExtractor
+          field_pointer: ["objects"]
+      paginator:
+        url_base: "#/requester/url_base"
+        type: DefaultPaginator
+        page_token_option:
+          type: RequestOption
+          inject_into: request_parameter
+          field_name: offset
+        page_size_option:
+          type: RequestOption
+          field_name: limit
+          inject_into: request_parameter
+        pagination_strategy:
+          type: OffsetIncrement
+          page_size: 300
+    incremental_sync:
+      step: "P1D"
+      type: "DatetimeStreamSlicer"
+      cursor_field: "updated_date"
+      start_datetime: "{{ config['start_date'] }}"
+      datetime_format: '%Y-%m-%dT%H:%M:%S'
+      end_time_option:
+        type: RequestOption
+        field_name: "updated_date__lte"
+        inject_into: "request_parameter"
+      start_time_option:
+        type: RequestOption
+        field_name: "updated_date__gt"
+        inject_into: request_parameter
+      cursor_granularity: "PT0.000001S"
+      end_datetime: "{{ now_utc() }}"
+
+  - type: DeclarativeStream
+    name: orderitem
+    primary_key:
+      - uuid
+    schema_loader:
+      type: JsonFileSchemaLoader
+      file_path: "./source_revel_new/schemas/orderitem.json"
+    retriever:
+      type: SimpleRetriever
+      requester:
+        name: orderitem
+        type: HttpRequester
+        url_base: https://savoypizza.revelup.com/resources/
+        path: /Orderitem
+        http_method: GET
+        request_parameters: {}
+        request_headers: {}
+        request_body_json: {}
+        authenticator:
+          type: ApiKeyAuthenticator
+          header: API-Authentication
+          api_token: '{{ config["api_key"] }}'
+      record_selector:
+        type: RecordSelector
+        extractor:
+          type: DpathExtractor
+          field_pointer: ["objects"]
+      paginator:
+        url_base: "#/requester/url_base"
+        type: DefaultPaginator
+        page_token_option:
+          type: RequestOption
+          inject_into: request_parameter
+          field_name: offset
+        page_size_option:
+          type: RequestOption
+          field_name: limit
+          inject_into: request_parameter
+        pagination_strategy:
+          type: OffsetIncrement
+          page_size: 300
+    incremental_sync:
+      step: "P1D"
+      type: "DatetimeStreamSlicer"
+      cursor_field: "updated_date"
+      start_datetime: "{{ config['start_date'] }}"
+      datetime_format: '%Y-%m-%dT%H:%M:%S'
+      end_time_option:
+        type: RequestOption
+        field_name: "updated_date__lte"
+        inject_into: "request_parameter"
+      start_time_option:
+        type: RequestOption
+        field_name: "updated_date__gt"
+        inject_into: request_parameter
+      cursor_granularity: "PT0.000001S"
+      end_datetime: "{{ now_utc() }}"
+  
+
+
+
+  - type: DeclarativeStream
+    name: customer
+    primary_key:
+      - uuid
+    schema_loader:
+      type: JsonFileSchemaLoader
+      file_path: "./source_revel_new/schemas/order.json"
+        
+    retriever:
+      type: SimpleRetriever
+      requester:
+        name: customer
+        type: HttpRequester
+        url_base: https://savoypizza.revelup.com/resources/
+        path: /Customer
+        http_method: GET
+        request_parameters: {}
+        request_headers: {}
+        request_body_json: {}
+        authenticator:
+          type: ApiKeyAuthenticator
+          header: API-Authentication
+          api_token: '{{ config["api_key"] }}'
+      record_selector:
+        type: RecordSelector
+        extractor:
+          type: DpathExtractor
+          field_pointer: ["objects"]
+      paginator:
+        url_base: "#/requester/url_base"
+        type: DefaultPaginator
+        page_token_option:
+          type: RequestOption
+          inject_into: request_parameter
+          field_name: offset
+        page_size_option:
+          type: RequestOption
+          field_name: limit
+          inject_into: request_parameter
+        pagination_strategy:
+          type: OffsetIncrement
+          page_size: 300
+    incremental_sync:
+      step: "P1D"
+      type: "DatetimeStreamSlicer"
+      cursor_field: "updated_date"
+      start_datetime: "{{ config['start_date'] }}"
+      datetime_format: '%Y-%m-%dT%H:%M:%S'
+      end_time_option:
+        type: RequestOption
+        field_name: "updated_date__lte"
+        inject_into: "request_parameter"
+      start_time_option:
+        type: RequestOption
+        field_name: "updated_date__gt"
+        inject_into: request_parameter
+      cursor_granularity: "PT0.000001S"
+      end_datetime: "{{ now_utc() }}"
+
 
 spec: 
   documentation_url: https://docs.airbyte.io/integrations/sources/ravel
