add streams working

--- a/source_revel_n/manifest.yaml
+++ b/source_revel_n/manifest.yaml
@@ -1,4 +1,8 @@
 version: 0.30.1
+
+# Plan for parameterization
+# Schema loader, retriever, record selector, paginator, incremental sync
+
 type: DeclarativeSource
 check:
   type: CheckStream
@@ -8,15 +12,16 @@ check:
     - product
     - order
     - orderitem
-
 streams:
   - type: DeclarativeStream
     name: address
     primary_key:
       - uuid
+      
     schema_loader:
       type: JsonFileSchemaLoader
       file_path: "./source_revel_new/schemas/address.json"
+
     retriever:
       type: SimpleRetriever
       requester:
@@ -93,6 +98,7 @@ streams:
         pagination_strategy:
           type: OffsetIncrement
           page_size: 300
+
     incremental_sync:
       step: "P1D"
       type: "DatetimeStreamSlicer"
@@ -114,9 +120,11 @@ streams:
     name: orderitem
     primary_key:
       - uuid
+
     schema_loader:
       type: JsonFileSchemaLoader
       file_path: "./source_revel_new/schemas/orderitem.json"
+
     retriever:
       type: SimpleRetriever
       requester:
@@ -132,11 +140,13 @@ streams:
           type: ApiKeyAuthenticator
           header: API-Authentication
           api_token: '{{ config["api_key"] }}'
+
       record_selector:
         type: RecordSelector
         extractor:
           type: DpathExtractor
           field_pointer: ["objects"]
+
       paginator:
         url_base: "#/requester/url_base"
         type: DefaultPaginator
@@ -151,6 +161,7 @@ streams:
         pagination_strategy:
           type: OffsetIncrement
           page_size: 300
+
     incremental_sync:
       step: "P1D"
       type: "DatetimeStreamSlicer"
@@ -173,6 +184,7 @@ streams:
     name: customer
     primary_key:
       - uuid
+
     schema_loader:
       type: JsonFileSchemaLoader
       file_path: "./source_revel_new/schemas/order.json"
@@ -192,11 +204,13 @@ streams:
           type: ApiKeyAuthenticator
           header: API-Authentication
           api_token: '{{ config["api_key"] }}'
+
       record_selector:
         type: RecordSelector
         extractor:
           type: DpathExtractor
           field_pointer: ["objects"]
+
       paginator:
         url_base: "#/requester/url_base"
         type: DefaultPaginator
@@ -211,6 +225,7 @@ streams:
         pagination_strategy:
           type: OffsetIncrement
           page_size: 300
+
     incremental_sync:
       step: "P1D"
       type: "DatetimeStreamSlicer"
@@ -227,11 +242,12 @@ streams:
         inject_into: request_parameter
       cursor_granularity: "PT0.000001S"
       end_datetime: "{{ now_utc() }}"
-
+  
   - type: DeclarativeStream
     name: product
     primary_key:
         - uuid
+
     schema_loader:
         type: JsonFileSchemaLoader
         file_path: "./source_revel_new/schemas/product.json"
@@ -251,11 +267,13 @@ streams:
           type: ApiKeyAuthenticator
           header: API-Authentication
           api_token: '{{ config["api_key"] }}'
+
       record_selector:
         type: RecordSelector
         extractor:
           type: DpathExtractor
           field_pointer: ["objects"]
+
       paginator:
         url_base: "#/requester/url_base"
         type: DefaultPaginator
@@ -270,6 +288,7 @@ streams:
         pagination_strategy:
           type: OffsetIncrement
           page_size: 300
+
       incremental_sync:
         step: "P1D"
         type: "DatetimeStreamSlicer"
